--- a/app/src/main/res/layout/activity_post_new_event.xml
+++ b/app/src/main/res/layout/activity_post_new_event.xml
@@ -23,22 +23,19 @@
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_margin="10dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="80dp"
                     android:text="Post New Event"
                     android:textColor="@color/colorPrimary"
                     android:textAlignment="center"
-                    android:textSize="32dp"
+                    android:textSize="32sp"
                     android:textStyle="bold" />
             </LinearLayout>
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp">
-            </LinearLayout>
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
                 android:weightSum="6"
                 android:orientation="horizontal"
                 >
@@ -49,12 +46,12 @@
                     android:layout_gravity="center"
                     >
 
-                    <Button
+                    <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/solid_button"
-                        android:text="Name"
-                        android:textColor="#FFFFFF" />
+                        android:textColor="@color/colorPrimary"
+                        android:textStyle="bold"
+                        android:text="Name" />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
@@ -63,9 +60,11 @@
                     android:layout_gravity="center"
                     >
 
-                    <EditText
+                    <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorPrimary"
                         android:id="@+id/post_name"
                         android:layout_weight="4" />
                 </LinearLayout>
@@ -73,7 +72,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
                 android:weightSum="6"
                 android:orientation="horizontal"
                 >
@@ -84,12 +83,12 @@
                     android:layout_gravity="center"
                     >
 
-                    <Button
+                    <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/solid_button"
-                        android:text="Blood Group"
-                        android:textColor="#FFFFFF" />
+                        android:textStyle="bold"
+                        android:textColor="@color/colorPrimary"
+                        android:text="Blood Group" />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
@@ -98,9 +97,11 @@
                     android:layout_gravity="center"
                     >
 
-                    <EditText
+                    <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorPrimary"
                         android:id="@+id/post_bloodgroup"
                         android:layout_weight="4" />
                 </LinearLayout>
@@ -108,7 +109,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
                 android:weightSum="6"
                 android:orientation="horizontal"
                 >
@@ -119,12 +120,12 @@
                     android:layout_gravity="center"
                     >
 
-                    <Button
+                    <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/solid_button"
-                        android:text="Location"
-                        android:textColor="#FFFFFF" />
+                        android:textStyle="bold"
+                        android:textColor="@color/colorPrimary"
+                        android:text="Location" />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
@@ -135,22 +136,22 @@
                     android:layout_gravity="center"
                     >
 
-                    <EditText
+                    <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:id="@+id/post_location"
-                        android:layout_weight="5"
-                        android:hint="DD-MM-YYYY"
+                        android:layout_weight="4"
+                        android:textColorHint="@color/colorPrimary"
                         android:textAlignment="center"
                         android:textSize="15dp"/>
 
-                    <Button
+                    <com.google.android.material.button.MaterialButton
                         android:id="@+id/post_button_location"
                         android:layout_width="0dp"
                         android:layout_height="match_parent"
-                        android:layout_weight="3"
-                        android:background="@drawable/solid_button"
-                        android:text="set\nlocation"
+                        style="@style/StyleButton"
+                        android:layout_weight="4"
+                        android:text="Map"
                         android:textSize="15dp" />
 
                 </LinearLayout>
@@ -158,7 +159,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
                 android:weightSum="6"
                 android:orientation="horizontal"
                 >
@@ -169,12 +170,12 @@
                     android:layout_gravity="center"
                     >
 
-                    <Button
+                    <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/solid_button"
-                        android:text="Phone Number"
-                        android:textColor="#FFFFFF" />
+                        android:textStyle="bold"
+                        android:textColor="@color/colorPrimary"
+                        android:text="Phone Number" />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
@@ -183,9 +184,11 @@
                     android:layout_gravity="center"
                     >
 
-                    <EditText
+                    <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:textStyle="bold"
+                        android:textColor="@color/colorPrimary"
                         android:id="@+id/post_cellno"
                         android:layout_weight="4" />
                 </LinearLayout>
@@ -193,7 +196,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
+                android:layout_margin="5dp"
                 android:weightSum="6"
                 android:orientation="horizontal"
                 >
@@ -204,12 +207,12 @@
                     android:layout_gravity="center"
                     >
 
-                    <Button
+                    <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:background="@drawable/solid_button"
-                        android:text="Date of Birth"
-                        android:textColor="#FFFFFF" />
+                        android:textStyle="bold"
+                        android:textColor="@color/colorPrimary"
+                        android:text="Date of Birth" />
                 </LinearLayout>
                 <LinearLayout
                     android:layout_width="0dp"
@@ -220,22 +223,23 @@
                     android:layout_gravity="center"
                     >
 
-                    <EditText
+                    <com.google.android.material.textfield.TextInputEditText
                         android:layout_width="0dp"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:id="@+id/post_dateofrequirement"
-                        android:layout_weight="5"
+                        android:layout_weight="4"
                         android:hint="DD-MM-YYYY"
                         android:textAlignment="center"
+                        android:textColorHint="@color/colorPrimary"
                         android:textSize="15dp"/>
 
-                    <Button
+                    <com.google.android.material.button.MaterialButton
                         android:id="@+id/post_datepicker"
                         android:layout_width="0dp"
+                        style="@style/StyleButton"
                         android:layout_height="match_parent"
-                        android:layout_weight="3"
-                        android:background="@drawable/solid_button"
-                        android:text="Pick"
+                        android:layout_weight="4"
+                        android:text="Calendar"
                         android:textSize="15dp" />
 
                 </LinearLayout>
@@ -243,33 +247,21 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_margin="30dp"
+                android:layout_marginBottom="80dp"
                 ></LinearLayout>
             <LinearLayout
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:weightSum="3">
-                <LinearLayout
-                    android:layout_width="0dp"
+                android:layout_gravity="center_horizontal"
+                >
+                <Button
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    >
-                </LinearLayout>
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_weight="1"
-                    >
-                    <Button
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:id="@+id/post_button"
-                        android:background="@drawable/solid_button"
-                        android:text="@string/postdescription_button_post"
-                        android:textColor="#FFFFFF"
-                        android:textSize="24sp" />
-                </LinearLayout>
+                    android:id="@+id/post_button"
+                    style="@style/StyleButton"
+                    android:text="@string/postdescription_button_post"
+                    android:textSize="24sp"/>
             </LinearLayout>
         </LinearLayout>
     </ScrollView>
