--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -15,7 +15,7 @@
         android:layout_weight="4"
         android:layout_gravity="center_horizontal"
         android:layout_marginTop="10dp"
-        app:srcCompat="@drawable/logo" />
+         />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -26,13 +26,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
-        android:hint="E-mail">
+        android:hint="E-mail"
+        android:textColorHint="@color/colorPrimaryDark">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/login_text_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="text"
+            android:textColor="@color/colorPrimary"
             android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -40,13 +42,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="4dp"
-        android:hint="Password">
+        android:hint="Password"
+        android:textColorHint="@color/colorPrimaryDark">
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/login_password_password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="textPassword"
+        android:textColor="@color/colorPrimary"
         android:maxLines="1" />
     </com.google.android.material.textfield.TextInputLayout>
 
