--- a/app/src/main/res/layout/activity_post_description.xml
+++ b/app/src/main/res/layout/activity_post_description.xml
@@ -157,7 +157,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_margin="5dp"
                 android:weightSum="6"
                 android:orientation="horizontal"
                 >
