--- a/app/src/main/res/layout/list_newsfeed.xml
+++ b/app/src/main/res/layout/list_newsfeed.xml
@@ -9,13 +9,13 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="80dp"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
+            android:layout_height="match_parent"
+            android:layout_marginBottom="1dp"
             android:weightSum="6"
             android:orientation="horizontal">
 
@@ -23,7 +23,7 @@
                 android:id="@+id/feed_lv_blood"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/textview_border"
+                android:background="@drawable/textview_border_not_curve"
                 android:layout_weight="4"
                 >
 
@@ -32,7 +32,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:gravity="center"
-                    android:textColor="#FFFFFF"
+                    android:textColor="@color/colorPrimary"
                     android:textSize="32sp"
                     android:textStyle="bold" />
             </LinearLayout>
@@ -42,7 +42,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="2"
-                android:background="@drawable/textview_border"
+                android:background="@drawable/textview_border_not_curve"
                 android:weightSum="2"
                 android:orientation="vertical">
 
@@ -56,8 +56,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:textColor="#FFFFFF"
-                        android:textSize="16sp"
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="12sp"
                         />
                 </LinearLayout>
 
@@ -71,8 +71,8 @@
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
                         android:gravity="center"
-                        android:textColor="#FFFFFF"
-                        android:textSize="16sp"/>
+                        android:textColor="@color/colorPrimary"
+                        android:textSize="12sp"/>
                 </LinearLayout>
             </LinearLayout>
 
