--- a/app/src/main/res/layout/activity_post_description.xml
+++ b/app/src/main/res/layout/activity_post_description.xml
@@ -251,6 +251,25 @@
                 </com.google.android.material.button.MaterialButton>
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginBottom="20dp">
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                >
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/postdesc_button_notify"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    style="@style/StyleButton"
+                    android:text="Notify">
+                </com.google.android.material.button.MaterialButton>
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
