--- a/app/src/main/res/drawable/textview_border_not_curve.xml
+++ b/app/src/main/res/drawable/textview_border_not_curve.xml
@@ -2,8 +2,8 @@
     android:shape="rectangle" >
 
     <stroke
-        android:width="1dp"
-        android:color="#E4E4E4" />
+        android:width="2dp"
+        android:color="@color/colorAccent" />
 
     <solid
         android:color="@color/textColorPrimary" />
