--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -15,7 +15,7 @@
         android:layout_margin="10dp"
         android:layout_gravity="center_horizontal"
         android:layout_weight="5"
-
+        android:src="@drawable/donate_plus"
         />
 
     <LinearLayout
@@ -38,7 +38,6 @@
             android:layout_gravity="center_horizontal"
             style="@style/StyleButton"
             android:text="Sign Up"
-            android:textSize="24sp"
             ></com.google.android.material.button.MaterialButton>
     </LinearLayout>
 
@@ -60,7 +59,6 @@
             android:layout_gravity="center_horizontal"
             style="@style/StyleButton"
             android:text="Log In"
-            android:textSize="24sp"
             ></com.google.android.material.button.MaterialButton>
     </LinearLayout>
 
